--- a/src/kOS.Addons.Ferram/kOS.AddOns.Ferram.csproj
+++ b/src/kOS.Addons.Ferram/kOS.AddOns.Ferram.csproj
@@ -41,10 +41,10 @@
       <HintPath>..\..\Resources\GameData\kOS\Plugins\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="kOS">
-      <HintPath>..\kOS\bin\Release\kOS.dll</HintPath>
+      <HintPath>..\..\Resources\GameData\kOS\Plugins\kOS.dll</HintPath>
     </Reference>
     <Reference Include="kOS.Safe">
-      <HintPath>..\kOS.Safe\bin\Release\kOS.Safe.dll</HintPath>
+      <HintPath>..\..\Resources\GameData\kOS\Plugins\kOS.Safe.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
